After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 663563 - Shouldn't offer to send socket files
Shouldn't offer to send socket files
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: File Transfer
2.33.x
Other Linux
: Normal normal
: ---
Assigned To: empathy-maint
empathy-maint
Depends on:
Blocks:
 
 
Reported: 2011-11-07 14:44 UTC by Guillaume Desmottes
Modified: 2011-11-10 14:25 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
doesn't allow to send socket files (1.58 KB, patch)
2011-11-07 14:46 UTC, Guillaume Desmottes
committed Details | Review

Description Guillaume Desmottes 2011-11-07 14:44:30 UTC
It doesn't make sense to allow user to attempt, and fail, to send socket files.
Comment 1 Guillaume Desmottes 2011-11-07 14:46:08 UTC
Created attachment 200888 [details] [review]
doesn't allow to send socket files
Comment 2 Guillaume Desmottes 2011-11-07 14:48:30 UTC
Ideally this should be easier to do: bug #663565
Comment 3 Guillaume Desmottes 2011-11-10 14:25:25 UTC
Attachment 200888 [details] pushed as 9b50f0a - doesn't allow to send socket files