doesn't allow to send socket files

https://bugzilla.gnome.org/show_bug.cgi?id=663563